--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts",
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
     "build": "tsc",
-    "test": "jest"
+    "start": "nodemon src/server.ts",
+    "test": "jest",
+    "test:cov": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -31,6 +34,7 @@
     "@types/node": "^13.7.0",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
+    "rimraf": "^3.0.2",
     "sucrase": "^3.12.1",
     "typescript": "^3.7.5"
   }
