--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
     "@types/express": "^4.17.2",
     "@types/morgan": "^1.7.37",
     "@types/node": "^13.7.0",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "rimraf": "^3.0.2",
