--- a/package.json
+++ b/package.json
@@ -36,9 +36,12 @@
     "@typescript-eslint/parser": "^2.19.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
     "sucrase": "^3.12.1",
     "typescript": "^3.7.5"
