--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
   },
   "extends": [
     "plugin:@typescript-eslint/recommended",
+    "plugin:jest/recommended",
     "prettier/@typescript-eslint",
     "airbnb-base"
   ],
