--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prebuild": "npm run clean",
     "build": "tsc",
     "start": "nodemon src/server.ts",
-    "test": "jest",
+    "test": "jest --detectOpenHandles --verbose",
     "test:cov": "jest --coverage"
   },
   "repository": {
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/jest": "^25.1.2",
     "@types/morgan": "^1.7.37",
     "@types/node": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
@@ -39,12 +40,14 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.7.0",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
     "sucrase": "^3.12.1",
+    "ts-jest": "^25.2.0",
     "typescript": "^3.7.5"
   }
 }
