--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,12 @@
     "target": "es6",
     "sourceMap": true,
     "outDir": "./dist",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "strict": true
   },
+  "include": [
+    "src/**/*"
+  ],
   "exclude": [
     "node_modules",
     "**/*.spec.ts"
