--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-node-boilerplate",
+  "name": "ts-express-boilerplate",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -13,15 +13,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rborgesds/ts-node-boilerplate.git"
+    "url": "git+https://github.com/rborgesds/ts-express-boilerplate.git"
   },
   "author": "Rodrigo Borges <rborgesds@gmail.com>",
   "license": "UNLICENSED",
   "private": true,
   "bugs": {
-    "url": "https://github.com/rborgesds/ts-node-boilerplate/issues"
+    "url": "https://github.com/rborgesds/ts-express-boilerplate/issues"
   },
-  "homepage": "https://github.com/rborgesds/ts-node-boilerplate#readme",
+  "homepage": "https://github.com/rborgesds/ts-express-boilerplate#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
