--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
+    "swagger-ui-express": "^4.1.3",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/jest": "^25.1.2",
     "@types/morgan": "^1.7.37",
     "@types/node": "^13.7.0",
+    "@types/swagger-ui-express": "^4.1.1",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
     "eslint": "^6.8.0",
