--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,15 @@
     "outDir": "./dist",
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "swagger.json"
   ],
   "exclude": [
-    "node_modules",
+    "node_modules/",
     "**/*.spec.ts"
   ]
 }
